# algorithm-lab

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md
algorithms/graphs/dijkstra/: CMakeLists.txt  README.md  bench_dijkstra.cpp  dijkstra.cpp  dijkstra.h  generator.cpp  generator.h  test_dijkstra.cpp
algorithms/graphs/dijkstra/src/: dijkstra.cpp
benchmarks/: CMakeLists.txt
benchmarks/algorithms/graphs/dijkstra/: CMakeLists.txt  README.md  bench_dijkstra.cpp
benchmarks/data_structures/lock_free/queue/: CMakeLists.txt  README.md  queue.cpp
benchmarks/data_structures/lock_free/stack/: CMakeLists.txt  README.md  stack.cpp
benchmarks/memory_layout/aos_soa/: CMakeLists.txt  README.md  main.cpp
benchmarks/memory_layout/cache/: README.md
src/: CMakeLists.txt
src/algebra/: CMakeLists.txt
src/algebra/crt/: README.md
src/algebra/garner/: CMakeLists.txt  README.md  proof.md
src/algebra/garner/src/: garner.cpp
src/algebra/gcd/: CMakeLists.txt  README.md
src/algebra/gcd/src/: gcd.cpp
src/algebra/gcdext/: CMakeLists.txt  README.md
src/algebra/gcdext/src/: gcdext.cpp
src/algebra/mod_inv/: CMakeLists.txt  README.md
src/algebra/mod_inv/src/: mod_inv.cpp
src/algebra/powmod/: CMakeLists.txt  README.md
src/algebra/powmod/src/: powmod.cpp
src/algebra/sieve/: CMakeLists.txt  README.md  proof.md
src/algebra/sieve/src/: sieve.cpp
src/algorithms/graphs/bellman_ford/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/bfs/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/bipartite_check/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/dfs/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/dijkstra/: CMakeLists.txt  proof.md
src/algorithms/graphs/dinic/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/edmonds_karp/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/floyd_warshall/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/kosaraju_scc/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/kruskal_mst/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/prim_mst/: CMakeLists.txt  README.md  proof.md
src/algorithms/graphs/topological_sort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/binary_search/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/bucket_sort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/counting_sort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/exponential_search/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/heapsort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/interpolation_search/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/introsort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/median_of_medians/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/mergesort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/quickselect/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/quicksort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/radix_sort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/shellsort/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/ternary_search/: CMakeLists.txt  README.md  proof.md
src/algorithms/sorting/timsort/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/: CMakeLists.txt
src/algorithms/strings/aho_corasick/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/kmp/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/polynomial_hash/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/rabin_karp/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/rolling_hash/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/suffix_array/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/suffix_automaton/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/suffix_tree/: CMakeLists.txt  README.md  proof.md
src/algorithms/strings/z_function/: CMakeLists.txt  README.md  proof.md
src/bit_manipulation/: CMakeLists.txt
src/bit_manipulation/bit_apps/: CMakeLists.txt  README.md
src/bit_manipulation/bit_apps/src/: bit_apps.cpp
src/bit_manipulation/bit_enum/: CMakeLists.txt  README.md
src/bit_manipulation/bit_enum/src/: bit_enum.cpp
src/bit_manipulation/bit_tricks/: CMakeLists.txt  README.md
src/bit_manipulation/bit_tricks/src/: bit_tricks.cpp
src/data_structures/associative/hash_table_chaining/: CMakeLists.txt  README.md  proof.md
src/data_structures/associative/hash_table_oa/: CMakeLists.txt  README.md  proof.md
src/data_structures/associative/ordered_map/: CMakeLists.txt  README.md  proof.md
src/data_structures/dsu/: CMakeLists.txt  README.md  proof.md
src/data_structures/dsu/src/: dsu.cpp  dsu_rank.cpp
src/data_structures/lock_free/atomic/: README.md
src/data_structures/lock_free/barrier/: CMakeLists.txt  README.md
src/data_structures/lock_free/hash_map/: CMakeLists.txt  (+1 more)
src/data_structures/trie/: CMakeLists.txt  README.md  proof.md
tests/: CMakeLists.txt
tests/algebra/: CMakeLists.txt
tests/algebra/garner/: test_garner.cpp
tests/algebra/gcd/: test_gcd.cpp
tests/algebra/gcdext/: CMakeLists.txt  test_gcdext.cpp
tests/algebra/mod_inv/: test_mod_inv.cpp
tests/algebra/sieve/: test_sieve.cpp
tests/algorithms/: CMakeLists.txt
tests/algorithms/graphs/: CMakeLists.txt
tests/algorithms/sorting/: CMakeLists.txt
tests/algorithms/strings/: CMakeLists.txt
tests/bit_manipulation/: CMakeLists.txt
tests/bit_manipulation/bit_apps/: test_bit_apps.cpp
tests/bit_manipulation/bit_enum/: test_bit_enum.cpp
tests/bit_manipulation/bit_tricks/: test_bit_tricks.cpp
tests/data_structures/: CMakeLists.txt
tests/data_structures/associative/: CMakeLists.txt
tests/data_structures/dsu/: CMakeLists.txt  test_dsu.cpp
tests/data_structures/lock_free/: CMakeLists.txt
tests/data_structures/range_query/: CMakeLists.txt
tests/data_structures/trie/: CMakeLists.txt  test_trie.cpp
(+192 files in other folders)
