add_subdirectory(algorithms/graphs/dijkstra)
add_subdirectory(algorithms/graphs/bipartite_check)

add_subdirectory(data_structures/lock_free/stack)
add_subdirectory(data_structures/lock_free/queue)
add_subdirectory(data_structures/lock_free/hash_map)
add_subdirectory(data_structures/lock_free/ring_buffer)
add_subdirectory(data_structures/lock_free/barrier)
add_subdirectory(data_structures/lock_free/spinlock)
add_subdirectory(data_structures/range_query/mo)
add_subdirectory(data_structures/range_query/sqrt_decomposition)

add_subdirectory(algebra)