add_subdirectory(algorithms/graphs/dijkstra)
add_subdirectory(algorithms/graphs/bellman_ford)
add_subdirectory(algorithms/graphs/bipartite_check)
add_subdirectory(algorithms/graphs/dfs)
add_subdirectory(algorithms/graphs/bfs)
add_subdirectory(algorithms/graphs/topological_sort)
add_subdirectory(algorithms/graphs/kosaraju_scc)
add_subdirectory(algorithms/graphs/kruskal_mst)
add_subdirectory(algorithms/graphs/prim_mst)

add_subdirectory(data_structures/lock_free/stack)
add_subdirectory(data_structures/lock_free/queue)
add_subdirectory(data_structures/lock_free/hash_map)
add_subdirectory(data_structures/lock_free/ring_buffer)
add_subdirectory(data_structures/lock_free/barrier)
add_subdirectory(data_structures/lock_free/spinlock)
add_subdirectory(data_structures/range_query/mo)
add_subdirectory(data_structures/range_query/sqrt_decomposition)
add_subdirectory(data_structures/range_query/fenwick)

add_subdirectory(data_structures/dsu)

add_subdirectory(algebra)