add_subdirectory(algorithms/graphs/dijkstra)
add_subdirectory(algorithms/graphs/bellman_ford)
add_subdirectory(algorithms/graphs/bipartite_check)
add_subdirectory(algorithms/graphs/dfs)
add_subdirectory(algorithms/graphs/bfs)
add_subdirectory(algorithms/graphs/topological_sort)
add_subdirectory(algorithms/graphs/kosaraju_scc)
add_subdirectory(algorithms/graphs/kruskal_mst)
add_subdirectory(algorithms/graphs/prim_mst)
add_subdirectory(algorithms/graphs/floyd_warshall)
add_subdirectory(algorithms/graphs/edmonds_karp)
add_subdirectory(algorithms/graphs/dinic)
add_subdirectory(algorithms/sorting/quicksort)
add_subdirectory(algorithms/sorting/mergesort)
add_subdirectory(algorithms/sorting/heapsort)
add_subdirectory(algorithms/sorting/counting_sort)
add_subdirectory(algorithms/sorting/radix_sort)
add_subdirectory(algorithms/sorting/binary_search)
add_subdirectory(algorithms/sorting/interpolation_search)
add_subdirectory(algorithms/sorting/ternary_search)
add_subdirectory(algorithms/sorting/quickselect)

add_subdirectory(data_structures/lock_free/stack)
add_subdirectory(data_structures/lock_free/queue)
add_subdirectory(data_structures/lock_free/hash_map)
add_subdirectory(data_structures/lock_free/ring_buffer)
add_subdirectory(data_structures/lock_free/barrier)
add_subdirectory(data_structures/lock_free/spinlock)
add_subdirectory(data_structures/range_query/mo)
add_subdirectory(data_structures/range_query/sqrt_decomposition)
add_subdirectory(data_structures/range_query/fenwick)

add_subdirectory(data_structures/dsu)
add_subdirectory(data_structures/trie)

add_subdirectory(algebra)

add_subdirectory(bit_manipulation)
